--- a/zshrc.conf
+++ b/zshrc.conf
@@ -1,9 +1,15 @@
+# git clone https://github.com/tarjoilija/zgen.git "${HOME}/.zgen"
 source "${HOME}/.zgen/zgen.zsh"
+# zgen load urbainvaes/fzf-marks
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
 bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 # bindkey -s '^l' 'lfcd\n'
 bindkey -s '^ ' 'lfcd\n'
+
+# export NVM_DIR="$HOME/.nvm"
+# [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
+# [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm"  # This loads
 
 alias lg=lazygit
 alias gs="git status"
@@ -19,6 +25,7 @@ alias vi=nvim
 alias dd='dotter deploy'
 alias l=lfcd
 alias p="ping cloudflare.com"
+alias scrt="secretcli"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
