--- a/zshrc.conf
+++ b/zshrc.conf
@@ -1,5 +1,6 @@
 # git clone https://github.com/tarjoilija/zgen.git "${HOME}/.zgen"
 source "${HOME}/.zgen/zgen.zsh"
+# install fzf, then:
 # zgen load urbainvaes/fzf-marks
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
@@ -7,9 +8,6 @@ bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
 # bindkey -s '^l' 'lfcd\n'
 bindkey -s '^ ' 'lfcd\n'
 
-# export NVM_DIR="$HOME/.nvm"
-# [ -s "/opt/homebrew/opt/nvm/nvm.sh" ] && \. "/opt/homebrew/opt/nvm/nvm.sh"  # This loads nvm
-# [ -s "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm" ] && \. "/opt/homebrew/opt/nvm/etc/bash_completion.d/nvm"  # This loads
 
 alias lg=lazygit
 alias gs="git status"
@@ -30,8 +28,14 @@ alias scrt="secretcli"
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
 export TERM="xterm-256color"
+export HOSTNAME=`hostname`
 
-export PROMPT='%T %F{cyan}%~%b%f $ '
+if [[ $HOSTNAME = "nom.local" ]]
+	then
+		export PROMPT='%T %F{cyan}%~%b%f $ '
+	else
+		export PROMPT="%T $HOSTNAME %F{green}%~%b%f > "
+fi
 
 # foundry
 export PATH="$PATH:/Users/nom/.foundry/bin"
