--- a/zshrc.conf
+++ b/zshrc.conf
@@ -4,11 +4,6 @@ source "${HOME}/.zgen/zgen.zsh"
 # zgen load urbainvaes/fzf-marks
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
-bindkey ${FZF_MARKS_JUMP:-'^o'} fzm
-# bindkey -s '^l' 'lfcd\n'
-bindkey -s '^ ' 'lfcd\n'
-
-
 alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
@@ -55,16 +50,23 @@ gc () {
 	git push
 }
 
-lfcd () {
-    tmp="$(mktemp)"
-    lf -last-dir-path="$tmp" "$@"
-    if [ -f "$tmp" ]; then
-        dir="$(cat "$tmp")"
-        rm -f "$tmp"
-        if [ -d "$dir" ]; then
-            if [ "$dir" != "$(pwd)" ]; then
-                cd "$dir"
-            fi
-        fi
-    fi
+function lfcd() {
+	local tmp="$(mktemp)"
+	lf -last-dir-path="$tmp" "$@"
+	if [ -f "$tmp" ]; then
+			dir="$(cat "$tmp")"
+			rm -f "$tmp"
+			if [ -d "$dir" ]; then
+					if [ "$dir" != "$(pwd)" ]; then
+							cd "$dir"
+							# clear
+							zle && zle reset-prompt
+					fi
+			fi
+	fi
 }
+
+# bindkey -s '^l' 'lfcd\n'
+# -s translate input string to output
+zle -N lfcd; bindkey '^ ' lfcd #register widget + key
+bindkey '^o' fzm
