--- a/zshrc.conf
+++ b/zshrc.conf
@@ -19,6 +19,9 @@ alias dd='dotter deploy'
 alias l=lfcd
 alias p="ping cloudflare.com"
 alias scrt="secretcli"
+alias l="exa --icons --group-directories-first"
+alias la="exa --icons --group-directories-first --all"
+alias lh="exa --icons --group-directories-first --all"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
