--- a/kitty.conf
+++ b/kitty.conf
@@ -1712,8 +1712,9 @@ macos_show_window_title_in none
 
 #: New tab
 
-# map kitty_mod+t new_tab
-# map cmd+t       new_tab
+map shift+cmd+t new_tab
+map cmd+t new_tab
+map ctrl+t new_tab
 
 #: Close tab
 
