--- a/sway.conf
+++ b/sway.conf
@@ -139,7 +139,7 @@ set $term_float_portrait footclient -a floating_shell_portrait
 
 # shortcuts
 #
-bindsym $mod+Return exec foot
+bindsym $mod+Return exec kitty
 bindsym $mod+Shift+Return exec foot --app-id=floating_shell --window-size-chars=128x36
 #bindsym $mod+Shift+o exec foot --app-id=floating_shell --window-size-chars=128x36 fzm
 bindsym $mod+o exec foot --app-id=floating_shell --window-size-chars=128x36 lf
