--- a/zshrc.conf
+++ b/zshrc.conf
@@ -4,6 +4,8 @@ source "${HOME}/.zgen/zgen.zsh"
 # zgen load urbainvaes/fzf-marks
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
+export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/
+
 alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
