fixed neovim floats

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -24,6 +24,7 @@ alias scrt="secretcli"
 alias l="exa --icons --group-directories-first"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
+alias ll="exa --icons --group-directories-first --all -l"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
