--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -149,7 +149,9 @@ cmd mkdir %{{
 	lf -remote "send $id select \"$*\""
 }}
 
-cmd mk %{{
+map <c-n> push :mkdir<space>
+
+cmd touch %{{
 	touch -- "$*"
 	lf -remote "send $id select \"$*\""
 }}
