ark pixel nerdfont

--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -158,7 +158,7 @@ cmd touch %{{
 
 # move current file or selected files to trash folder
 # (also see 'man mv' for backup/overwrite options)
-cmd trash %set -f; mv $fx ~/.trash
+cmd trash %set -f; mv $fx ~/.trash-lf
 
 # define a custom 'delete' command
 # cmd delete ${{
@@ -170,7 +170,8 @@ cmd trash %set -f; mv $fx ~/.trash
 # }}
 
 # use '<delete>' key for either 'trash' or 'delete' command
-# map <delete> trash
+map <delete> trash
+map <backspace2> trash
 # map <delete> delete
 
 # extract the current file with the right command
