--- a/kitty.conf
+++ b/kitty.conf
@@ -20,10 +20,11 @@ map cmd+[ previous_window
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Iosevka
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
+#font_family      Iosevka
+font_family      Ark Nerd Font Mono
+# bold_font        auto
+# italic_font      auto
+# bold_italic_font auto
 
 #: You can specify different fonts for the bold/italic/bold-italic
 #: variants. To get a full list of supported fonts use the `kitty
@@ -38,7 +39,7 @@ bold_italic_font auto
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16
+font_size 18
 
 #: Font size (in pts)
 
@@ -669,7 +670,7 @@ draw_minimal_borders yes
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 18 22
+window_padding_width 32 48
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -914,14 +915,15 @@ tab_bar_background #111
 
 #: }}}
 
-#: Color scheme \{\{{
-
+# THEME
+#
 # foreground #dddddd
-background #111
+background #191910
+# 151e13
 
 #: The foreground and background colors
 
-#background_opacity 0.85
+#background_opacity 0.95
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
@@ -994,20 +996,15 @@ background #111
 #: dull and bright version, for the first 16 colors. You can set the
 #: remaining 240 colors as color16 to color255.
 
-# color0 #000000
-# color8 #767676
-
 #: black
-
-# color1 #cc0403
-# color9 #f2201f
-
+color0 #000000
+color8 #767676
 #: red
-
-# color2  #19cb00
-# color10 #23fd00
-
+color1 #F28779
+color9 #ff3334
 #: green
+color2  #BAE67E
+color10 #9ec400
 
 # color3  #cecb00
 # color11 #fffd00
