--- a/zshrc.conf
+++ b/zshrc.conf
@@ -11,6 +11,10 @@ alias gs="git status"
 alias gl="git log"
 alias gp="git push"
 alias gd="git diff"
+alias cb="cargo build"
+alias cc="cargo check"
+alias cr="cargo run"
+alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
