--- a/zshrc.conf
+++ b/zshrc.conf
@@ -29,6 +29,8 @@ alias l="exa --icons --group-directories-first"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
 alias ll="exa --icons --group-directories-first --all -l"
+alias vi="nvim"
+alias vim="nvim"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
