--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -2,7 +2,7 @@
 set shell sh
 
 set icons
-set hidden # show hidden files by default
+# set hidden # show hidden files by default
 
 # set '-eu' options for shell commands
 # These options are used to have safer shell commands. Option '-e' is used to
