add cargo bin to path

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -4,7 +4,8 @@ source "${HOME}/.zgen/zgen.zsh"
 # zgen load urbainvaes/fzf-marks
 source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
-export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/
+export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
+
 
 alias lg=lazygit
 alias gs="git status"
