--- a/.dotter/macos.toml.example
+++ b/.dotter/macos.toml.example
@@ -1,12 +1,13 @@
 packages = [
+	"bin",
   "alacritty",
   "bash",
   "default",
   "helix",
+  "kitty",
   "lf",
   "nvim",
   "skhd",
-  "kitty",
   "zsh",
 ]
 
