--- a/zshrc.conf
+++ b/zshrc.conf
@@ -6,7 +6,6 @@ source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
-
 alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
@@ -32,6 +31,8 @@ alias lh="exa --icons --group-directories-first --all"
 alias ll="exa --icons --group-directories-first --all -l"
 alias vi="nvim"
 alias vim="nvim"
+
+alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
@@ -63,6 +64,7 @@ gc () {
 	git push
 }
 
+# lf directory change
 function lfcd() {
 	local tmp="$(mktemp)"
 	lf -last-dir-path="$tmp" "$@"
@@ -78,8 +80,34 @@ function lfcd() {
 			fi
 	fi
 }
-
 # bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
 zle -N lfcd; bindkey '^ ' lfcd #register widget + key
 bindkey '^o' fzm
+
+function fzf_jump_dir() {
+	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
+	files=($(fd --type d --strip-cwd-prefix --max-depth 5 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+		--header $'ctrl-e:edit, ctrl-o:open\n' \
+		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
+		--bind 'ctrl-o:execute:open {1}' \
+		"$@"))
+	[[ -n "$files" ]] && cd "${files[@]}"
+	zle && zle reset-prompt
+}
+zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
+
+
+
+function fzf_find() {
+	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
+	files=($(fd --type d --strip-cwd-prefix --max-depth 5 --max-results 10000 | fzf --prompt 'files > ' --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}' \
+		--header $'ctrl-e:edit, ctrl-o:open, ctrl-f:files, ctrl-d:dirs\n' \
+		--bind 'ctrl-d:change-prompt(dirs > )+reload(find * -type d)' \
+		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
+    --bind 'ctrl-f:change-prompt(files > )+reload(find * -type f)' \
+		--bind 'ctrl-o:execute:open {1}' \
+		"$@"))
+	[[ -n "$files" ]] && ${EDITOR:-vim} "${files[@]}"
+}
+zle -N fzf_find; bindkey '^f' fzf_find
