--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -49,7 +49,20 @@ map <c-p> :quit
 map <c-space> :quit
 map <esc> :quit
 
-map <c-e> ${{nvim .}}
+cmd edit ${{
+	nvim $f
+}}
+
+map <c-e> :edit
+map e :edit
+map E $(nvim .)
+
+
+cmd opener ${{
+	open "$f"
+}}
+map o :opener
+map O &(open .)
 
 map } :bottom
 map { :top
