--- a/zshrc.conf
+++ b/zshrc.conf
@@ -10,6 +10,9 @@ alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
 alias gp="git push"
+alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
+alias push="git push"
+alias pull="git pull"
 alias gd="git diff"
 alias cb="cargo build"
 alias cc="cargo check"
@@ -31,8 +34,6 @@ alias lh="exa --icons --group-directories-first --all"
 alias ll="exa --icons --group-directories-first --all -l"
 alias vi="nvim"
 alias vim="nvim"
-
-alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
