--- a/zshrc.conf
+++ b/zshrc.conf
@@ -11,6 +11,8 @@ alias gs="git status"
 alias gl="git log"
 alias gp="git push"
 alias b="git branch "$@" --sort=-committerdate --sort=-HEAD --format=$'%(HEAD) %(color:yellow)%(refname:short) %(color:green)(%(committerdate:relative))\t%(color:blue)%(subject)%(color:reset)' --color=always | column -ts$'\t'"
+alias branch="b"
+alias gb="b"
 alias push="git push"
 alias pull="git pull"
 alias gd="git diff"
@@ -20,7 +22,7 @@ alias cr="cargo run"
 alias ct="cargo test"
 alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
-alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
+# alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias e=nvim
 alias vim=nvim
 alias vi=nvim
