--- a/zshrc.conf
+++ b/zshrc.conf
@@ -36,6 +36,8 @@ alias lh="exa --icons --group-directories-first --all"
 alias ll="exa --icons --group-directories-first --all -l"
 alias vi="nvim"
 alias vim="nvim"
+alias prev="fzf --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}'"
+
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
@@ -88,6 +90,23 @@ function lfcd() {
 zle -N lfcd; bindkey '^ ' lfcd #register widget + key
 bindkey '^o' fzm
 
+# # joshuto directory change
+# function joshutocd() {
+# 	local tmp="$(mktemp)"
+# 	joshuto
+# 	if [ -f "$tmp" ]; then
+# 			dir="$(cat "$tmp")"
+# 			rm -f "$tmp"
+# 			if [ -d "$dir" ]; then
+# 					if [ "$dir" != "$(pwd)" ]; then
+# 							cd "$dir"
+# 							zle && zle reset-prompt # clear
+# 					fi
+# 			fi
+# 	fi
+# }
+# zle -N joshutocd; bindkey '^i' joshutocd #register widget + key
+
 function fzf_jump_dir() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
 	files=($(fd --type d --strip-cwd-prefix --max-depth 5 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
@@ -104,7 +123,7 @@ zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
 
 function fzf_find() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --type d --strip-cwd-prefix --max-depth 5 --max-results 10000 | fzf --prompt 'files > ' --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}' \
+	files=($(fd --type d --strip-cwd-prefix --hidden --max-depth 5 --max-results 10000 | fzf --prompt 'files > ' --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}' \
 		--header $'ctrl-e:edit, ctrl-o:open, ctrl-f:files, ctrl-d:dirs\n' \
 		--bind 'ctrl-d:change-prompt(dirs > )+reload(find * -type d)' \
 		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
