--- a/alacritty.yml
+++ b/alacritty.yml
@@ -14,7 +14,7 @@ env:
   TERM: xterm-256color
 
 window:
-  opacity: 0.95
+  opacity: 0.9
 
   # Window dimensions in character columns and lines
   # (changes require restart)
@@ -76,7 +76,7 @@ font:
   #   # style: Italic
 
   # Point size of the font
-  size: 18
+  size: 16
 
   # Offset is the extra space around each character. offset.y can be thought of
   # as modifying the linespacing, and offset.x as modifying the letter spacing.
@@ -93,12 +93,12 @@ font:
 
   # Scale the font size based on the monitor's DPI. This will lead to bigger text on HiDPI
   # screens and make reading text a little easier.
-  scale_with_dpi: true
+  # scale_with_dpi: true
 
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
-  use_thin_strokes: true
+  # use_thin_strokes: true
 
 # Should display the render timer
 #render_timer: false
