--- a/helix/config.toml
+++ b/helix/config.toml
@@ -1,2 +1,39 @@
+theme = "tokyonight"
+
 [editor.whitespace]
-render = "all"
+# render = "all"
+
+[keys.normal]
+C-h = "jump_view_left"
+C-j = "jump_view_down"
+C-k = "jump_view_up"
+C-l = "jump_view_right"
+C-p = ["move_line_up", "scroll_up"]
+C-n = ["move_line_down", "scroll_down"]
+C-s = [":write"]
+esc = ["collapse_selection", "keep_primary_selection"]
+D = ["insert_mode", "kill_to_line_end", "normal_mode"]
+H = ["goto_line_start"]
+L = ["goto_line_end"]
+V = ["goto_line_start", "select_mode", "goto_line_end"]
+"{" = ["goto_prev_paragraph"]
+"}" = ["goto_next_paragraph"]
+
+[keys.insert]
+C-s = [":write", "normal_mode"]
+C-p = ["move_line_up", "scroll_up"]
+C-n = ["move_line_down", "scroll_down"]
+
+[keys.select]
+"{" = ["goto_prev_paragraph"]
+"}" = ["goto_next_paragraph"]
+H = ["goto_line_start"]
+L = ["goto_line_end"]
+
+[editor.cursor-shape]
+insert = "bar"
+normal = "block"
+select = "underline"
+
+[editor.file-picker]
+hidden = false
