--- a/kitty.conf
+++ b/kitty.conf
@@ -871,7 +871,7 @@ tab_separator " "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template " {title} "
+tab_title_template " {index}:{title} "
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
