--- a/zshrc.conf
+++ b/zshrc.conf
@@ -38,6 +38,12 @@ alias vi="nvim"
 alias vim="nvim"
 alias prev="fzf --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}'"
 
+# todo: convert to fzf
+alias doc="cargo doc --open"
+alias doc-yew="open https://yew.rs/docs/next/"
+alias doc-rs-yew="open https://docs.rs/yew/latest/yew/"
+alias doc-rustup-cargo="rustup doc --cargo"
+alias doc-rustup-core="rustup doc --core"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
