--- a/lf/lfrc.conf
+++ b/lf/lfrc.conf
@@ -3,6 +3,7 @@ set shell sh
 
 set icons
 # set hidden # show hidden files by default
+set hiddenfiles ".git:.github:node_modules:package-lock.json:bun.lockb:dist:target"
 
 # set '-eu' options for shell commands
 # These options are used to have safer shell commands. Option '-e' is used to
