--- a/zshrc.conf
+++ b/zshrc.conf
@@ -6,6 +6,9 @@ source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
+# block cursor (5=bar)
+echo '\e[1 q'
+
 alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
@@ -44,6 +47,9 @@ alias doc-yew="open https://yew.rs/docs/next/"
 alias doc-rs-yew="open https://docs.rs/yew/latest/yew/"
 alias doc-rustup-cargo="rustup doc --cargo"
 alias doc-rustup-core="rustup doc --core"
+alias doc-wasmtime="open https://docs.wasmtime.dev/"
+
+alias gen-yew-web3="cargo generate --git https://github.com/monomadic/yew-web3-template"
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
