--- a/kitty.conf
+++ b/kitty.conf
@@ -199,7 +199,7 @@ font_size 18
 #: special keyword: background. Note that if cursor is set to none
 #: then this setting is ignored.
 
-# cursor_shape block
+cursor_shape block
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
