--- a/zshrc.conf
+++ b/zshrc.conf
@@ -27,8 +27,14 @@ alias unzip 'atool --extract --explain $1'
 alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 # alias w='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias e=nvim
+alias edit=nvim
+alias e-config="cd ~/config/ && edit ."
+alias e-neovim="cd ~/config/neovim/ && edit init.lua"
+alias e-zsh="cd ~/config/ && edit zshrc.conf"
+
 alias vim=nvim
 alias vi=nvim
+
 alias dd='dotter deploy'
 alias l=lfcd
 alias p="ping cloudflare.com"
@@ -43,13 +49,15 @@ alias prev="fzf --layout=reverse --preview 'bat --style=numbers --color=always -
 
 # todo: convert to fzf
 alias doc="cargo doc --open"
-alias doc-yew="open https://yew.rs/docs/next/"
-alias doc-rs-yew="open https://docs.rs/yew/latest/yew/"
-alias doc-rustup-cargo="rustup doc --cargo"
-alias doc-rustup-core="rustup doc --core"
-alias doc-wasmtime="open https://docs.wasmtime.dev/"
+alias d-yew="open https://yew.rs/docs/next/"
+alias d-rs-yew="open https://docs.rs/yew/latest/yew/"
+alias d-rustup-cargo="rustup doc --cargo"
+alias d-rustup-core="rustup doc --core"
+alias d-wasmtime="open https://docs.wasmtime.dev/"
 
 alias gen-yew-web3="cargo generate --git https://github.com/monomadic/yew-web3-template"
+
+alias ls-colors='for x in {0..8}; do for i in {30..37}; do for a in {40..47}; do echo -ne "\e[$x;$i;$a""m\\\e[$x;$i;$a""m\e[0;37;40m "; done; echo; done; done; echo ""'
 
 # note: never put nvim in quotes... will print ctrl characters
 # export EDITOR=nvim
@@ -121,7 +129,7 @@ bindkey '^o' fzm
 
 function fzf_jump_dir() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --type d --strip-cwd-prefix --max-depth 5 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+	files=($(fd --type d --strip-cwd-prefix --max-depth 1 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
 		--header $'ctrl-e:edit, ctrl-o:open\n' \
 		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
 		--bind 'ctrl-o:execute:open {1}' \
@@ -131,7 +139,17 @@ function fzf_jump_dir() {
 }
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
 
-
+function fzf_jump_dir_ext() {
+	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
+	files=($(fd --type d --strip-cwd-prefix --max-depth 3 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+		--header $'ctrl-e:edit, ctrl-o:open\n' \
+		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
+		--bind 'ctrl-o:execute:open {1}' \
+		"$@"))
+	[[ -n "$files" ]] && cd "${files[@]}"
+	zle && zle reset-prompt
+}
+zle -N fzf_jump_dir_ext; bindkey '^k' fzf_jump_dir_ext
 
 function fzf_find() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
