--- a/zshrc.conf
+++ b/zshrc.conf
@@ -32,10 +32,14 @@ alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua"
 alias e-zsh="cd ~/config/ && edit zshrc.conf"
 
+alias c="e-config"
+alias c-neovim="e-neovim"
+alias c-zsh="e-zsh"
+
 alias vim=nvim
 alias vi=nvim
 
-alias dd='dotter deploy'
+alias dd='cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml deploy --global-config global.toml --local-config local.toml'
 alias l=lfcd
 alias p="ping cloudflare.com"
 alias scrt="secretcli"
