--- a/global.toml
+++ b/global.toml
@@ -1,58 +1,1 @@
-[helpers]
-
-[default]
-depends = []
-
-[default.files]
-
-[default.variables]
-"colorscheme" = "zellner"
-"zk_path" = "/mnt/data/notes/zk"
-
-[bin.files]
-"bin" = "~/.bin/"
-
-[alacritty]
-files = { "alacritty.yml" = "~/.config/alacritty/alacritty.yml" }
-
-[kitty]
-files = { "kitty.conf" = "~/.config/kitty/kitty.conf" }
-
-[skhd]
-files = { "skhd.conf" = "~/.config/skhd/skhdrc" }
-
-[bash]
-files = { "bash/rc.bash" = "~/.bashrc", "bash/fzm.bash" = "~/.bash/fzm.bash" }
-
-[sway]
-[sway.files]
-"sway.conf" = "~/.config/sway/config"
-"yambar.yml" = "~/.config/yambar/config.yml"
-"waybar" = "~/.config/waybar"
-
-[nvim]
-files = { "neovim" = "~/.config/nvim" }
-#files = { "neovim.lua" = "~/.config/nvim/init.lua", "snippets" = "~/.config/nvim/snippets" }
-# variables = { "colorscheme" = "darkblue" }
-
-[foot]
-files = { "foot/foot.ini" = "~/.config/foot/foot.ini" }
-
-[xdg]
-files = { "xdg-applications" = "~/.local/share/applications" }
-
-[helix]
-files = { "helix" = "~/.config/helix" }
-
-[lf]
-[lf.files]
-"lf/lfrc.conf" = { target = "~/.config/lf/lfrc", type = "symbolic" }
-"lf/pv.sh" = "~/.config/lf/pv.sh"
-"lf/icons" = "~/.config/lf/icons"
-"lf/colors" = "~/.config/lf/colors"
-
-[zsh]
-files = { "zshrc.conf" = "~/.zshrc" }
-
-[dotter]
-files = { "dotter/global.toml" = "~/.config/dotter/global.toml" }
+dotter/global.toml
