--- a/zshrc.conf
+++ b/zshrc.conf
@@ -40,6 +40,8 @@ alias vim=nvim
 alias vi=nvim
 
 alias dd='cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml deploy --global-config global.toml --local-config local.toml'
+alias dw='cd ~/config/ && dotter --cache-directory ~/.config/dotter/cache/ --cache-file ~/.config/dotter/cache.toml watch --global-config global.toml --local-config local.toml'
+
 alias l=lfcd
 alias p="ping cloudflare.com"
 alias scrt="secretcli"
