removed zgen dependency

--- a/zshrc.conf
+++ b/zshrc.conf
@@ -1,8 +1,11 @@
 # git clone https://github.com/tarjoilija/zgen.git "${HOME}/.zgen"
-source "${HOME}/.zgen/zgen.zsh"
+# source "${HOME}/.zgen/zgen.zsh"
 # install fzf, then:
 # zgen load urbainvaes/fzf-marks
-source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
+# source ~/.zgen/urbainvaes/fzf-marks-master/fzf-marks.plugin.zsh
+
+source ~/.zsh/fzf-marks.zsh
+source ~/.zsh/lf-jump.zsh
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
@@ -95,25 +98,10 @@ gc () {
 	git push
 }
 
-# lf directory change
-function lfcd() {
-	local tmp="$(mktemp)"
-	lf -last-dir-path="$tmp" "$@"
-	if [ -f "$tmp" ]; then
-			dir="$(cat "$tmp")"
-			rm -f "$tmp"
-			if [ -d "$dir" ]; then
-					if [ "$dir" != "$(pwd)" ]; then
-							cd "$dir"
-							# clear
-							zle && zle reset-prompt
-					fi
-			fi
-	fi
-}
 # bindkey -s '^l' 'lfcd\n'
 # -s translate input string to output
 zle -N lfcd; bindkey '^ ' lfcd #register widget + key
+
 bindkey '^o' fzm
 
 # # joshuto directory change
@@ -133,12 +121,32 @@ bindkey '^o' fzm
 # }
 # zle -N joshutocd; bindkey '^i' joshutocd #register widget + key
 
+function fzf_insert() {
+	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
+	files=($(fd --strip-cwd-prefix --max-depth 1 --max-results 10000 | \
+		fzf --prompt 'insert > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+			--height 50% \
+			--header $'ctrl-e:edit, ctrl-o:open\n' \
+			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
+			--bind 'ctrl-o:execute:open {1}' \
+		"$@"))
+	# [[ -n "$files" ]] && cd "${files[@]}"
+	# print $files
+	# zle && zle reset-prompt
+	#[ -n "$files" ] &&
+	print -z -- "$1 ${files[@]:q:q}"
+	zle
+}
+zle -N fzf_insert; bindkey '^y' fzf_insert
+
 function fzf_jump_dir() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --type d --strip-cwd-prefix --max-depth 1 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
-		--header $'ctrl-e:edit, ctrl-o:open\n' \
-		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
-		--bind 'ctrl-o:execute:open {1}' \
+	files=($(fd --type d --strip-cwd-prefix --max-depth 1 --max-results 10000 | \
+		fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+			--height 50% \
+			--header $'ctrl-e:edit, ctrl-o:open\n' \
+			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
+			--bind 'ctrl-o:execute:open {1}' \
 		"$@"))
 	[[ -n "$files" ]] && cd "${files[@]}"
 	zle && zle reset-prompt
