--- a/zshrc.conf
+++ b/zshrc.conf
@@ -52,6 +52,7 @@ alias l="exa --icons --group-directories-first"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
 alias ll="exa --icons --group-directories-first --all -l"
+alias lln="exa --icons --all -l --sort=date"
 alias vi="nvim"
 alias vim="nvim"
 alias prev="fzf --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}'"
