--- a/zshrc.conf
+++ b/zshrc.conf
@@ -6,6 +6,7 @@
 
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf-jump.zsh
+source ~/.zsh/fzf-templates.zsh
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
@@ -38,6 +39,10 @@ alias e-zsh="cd ~/config/ && edit zshrc.conf"
 alias c="e-config"
 alias c-neovim="e-neovim"
 alias c-zsh="e-zsh"
+
+alias t="fzf_create_template"
+alias new="fzf_create_template"
+alias template="fzf_create_template"
 
 alias vim=nvim
 alias vi=nvim
