--- a/zshrc.conf
+++ b/zshrc.conf
@@ -33,7 +33,7 @@ alias wiki='cd ~/wiki && nvim +Goyo ~/wiki/index.md'
 alias e=nvim
 alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
-alias e-neovim="cd ~/config/neovim/ && edit init.lua"
+alias e-neovim="cd ~/config/neovim/ && edit init.lua +PackerCompile"
 alias e-zsh="cd ~/config/ && edit zshrc.conf"
 
 alias c="e-config"
@@ -66,6 +66,7 @@ alias prev="fzf --layout=reverse --preview 'bat --style=numbers --color=always -
 alias doc="cargo doc --open"
 alias d-yew="open https://yew.rs/docs/next/"
 alias d-rs-yew="open https://docs.rs/yew/latest/yew/"
+alias d-rustdoc="open https://doc.rust-lang.org/rustdoc/"
 alias d-rustup-cargo="rustup doc --cargo"
 alias d-rustup-core="rustup doc --core"
 alias d-wasmtime="open https://docs.wasmtime.dev/"
