--- a/zshrc.conf
+++ b/zshrc.conf
@@ -35,6 +35,9 @@ alias edit=nvim
 alias e-config="cd ~/config/ && edit ."
 alias e-neovim="cd ~/config/neovim/ && edit init.lua +PackerCompile"
 alias e-zsh="cd ~/config/ && edit zshrc.conf"
+alias wiki="cd ~/wiki && edit index.md"
+alias e-wiki=wiki
+alias w=wiki
 
 alias c="e-config"
 alias c-neovim="e-neovim"
