--- a/zshrc.conf
+++ b/zshrc.conf
@@ -114,6 +114,11 @@ zle -N lfcd; bindkey '^ ' lfcd #register widget + key
 
 bindkey '^o' fzm
 
+# nv () {
+# 	nvim
+# }
+# zle -N nv; bindkey '^m' nv #register widget + key
+
 # # joshuto directory change
 # function joshutocd() {
 # 	local tmp="$(mktemp)"
