--- a/zshrc.conf
+++ b/zshrc.conf
@@ -13,6 +13,7 @@ export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 # block cursor (5=bar)
 echo '\e[1 q'
 
+alias ~=grep
 alias lg=lazygit
 alias gs="git status"
 alias gl="git log"
@@ -154,16 +155,18 @@ function fzf_insert() {
 }
 zle -N fzf_insert; bindkey '^y' fzf_insert
 
+# see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
 function fzf_jump_dir() {
-	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --type d --strip-cwd-prefix --max-depth 1 --max-results 10000 | \
-		fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+	files=($(exa --icons --only-dirs| \
+		fzf --prompt '> ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
 			--height 50% \
 			--header $'ctrl-e:edit, ctrl-o:open\n' \
 			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
 			--bind 'ctrl-o:execute:open {1}' \
 		"$@"))
-	[[ -n "$files" ]] && cd "${files[@]}"
+		file=($(echo ${files[@]}|cut -c2-))
+	[[ -n "$file" ]] && cd "${file[@]}"
 	zle && zle reset-prompt
 }
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
