--- a/zshrc.conf
+++ b/zshrc.conf
@@ -60,7 +60,7 @@ alias scrt="secretcli"
 alias l="exa --icons --group-directories-first"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
-alias ll="exa --icons --group-directories-first --all -l"
+alias ll="exa --icons --group-directories-first --all --no-time --no-permissions --no-user -l"
 alias lln="exa --icons --all -l --sort=date"
 alias vi="nvim"
 alias vim="nvim"
@@ -84,11 +84,13 @@ alias ls-colors='for x in {0..8}; do for i in {30..37}; do for a in {40..47}; do
 export TERM="xterm-256color"
 export HOSTNAME=`hostname`
 
+# PROMPT
+# %T time
 if [[ $HOSTNAME = "nom.local" ]]
 	then
-		export PROMPT='%T %F{cyan}%~%b%f $ '
+		export PROMPT='%F{blue} %~%b%f $ '
 	else
-		export PROMPT="%T $HOSTNAME %F{green}%~%b%f > "
+		export PROMPT="%T $HOSTNAME %F{green}% ~%b%f > "
 fi
 
 # foundry
@@ -161,7 +163,7 @@ function fzf_jump_dir() {
 		fzf --prompt '> ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
 			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
 			--height 50% \
-			--header $'ctrl-e:edit, ctrl-o:open\n' \
+			--header $'ctrl-[e:edit, o:open, c:cancel]\n' \
 			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
 			--bind 'ctrl-o:execute:open {1}' \
 		"$@"))
@@ -170,6 +172,20 @@ function fzf_jump_dir() {
 	zle && zle reset-prompt
 }
 zle -N fzf_jump_dir; bindkey '^j' fzf_jump_dir
+
+# see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
+function fzf_jump_workspace() {
+	files=($(fd . ~/workspaces --extension workspace --follow| \
+		fzf --prompt 'workspace > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
+			--height 50% \
+			--header $'ctrl-[o:open, c:cancel]\n' \
+			--bind 'ctrl-o:execute:open {1}' \
+		"$@"))
+	[[ -n "$files" ]] && cd "${files[@]}"
+	zle && zle reset-prompt
+}
+zle -N fzf_jump_workspace; bindkey '^w' fzf_jump_workspace
 
 function fzf_jump_dir_ext() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
