--- a/zshrc.conf
+++ b/zshrc.conf
@@ -7,6 +7,7 @@
 source ~/.zsh/fzf-marks.zsh
 source ~/.zsh/lf-jump.zsh
 source ~/.zsh/fzf-templates.zsh
+source ~/.zsh/fzf-custom.zsh
 
 export PATH=$PATH:$HOME/.local/share/nvim/mason/bin/:$HOME/.cargo/bin/
 
@@ -40,10 +41,6 @@ alias wiki="cd ~/wiki && edit index.md"
 alias e-wiki=wiki
 alias w=wiki
 
-alias c="e-config"
-alias c-neovim="e-neovim"
-alias c-zsh="e-zsh"
-
 alias t="fzf_create_template"
 alias new="fzf_create_template"
 alias template="fzf_create_template"
@@ -58,9 +55,11 @@ alias l=lfcd
 alias p="ping cloudflare.com"
 alias scrt="secretcli"
 alias l="exa --icons --group-directories-first"
+alias lt="exa --tree --icons --level 2"
 alias la="exa --icons --group-directories-first --all"
 alias lh="exa --icons --group-directories-first --all"
-alias ll="exa --icons --group-directories-first --all --no-time --no-permissions --no-user -l"
+alias ll="exa --icons --group-directories-first --all --no-time --no-permissions --no-user -l --ignore-glob '.DS_Store'"
+
 alias lln="exa --icons --all -l --sort=date"
 alias vi="nvim"
 alias vim="nvim"
@@ -115,29 +114,11 @@ gc () {
 # -s translate input string to output
 zle -N lfcd; bindkey '^ ' lfcd #register widget + key
 
-bindkey '^o' fzm
+bindkey '^b' fzm
 
-# nv () {
-# 	nvim
-# }
-# zle -N nv; bindkey '^m' nv #register widget + key
-
-# # joshuto directory change
-# function joshutocd() {
-# 	local tmp="$(mktemp)"
-# 	joshuto
-# 	if [ -f "$tmp" ]; then
-# 			dir="$(cat "$tmp")"
-# 			rm -f "$tmp"
-# 			if [ -d "$dir" ]; then
-# 					if [ "$dir" != "$(pwd)" ]; then
-# 							cd "$dir"
-# 							zle && zle reset-prompt # clear
-# 					fi
-# 			fi
-# 	fi
-# }
-# zle -N joshutocd; bindkey '^i' joshutocd #register widget + key
+bindkey '^e' fzf_edit
+bindkey '^o' fzf_cd
+# bindkey '^f' fzf_cd
 
 function fzf_insert() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
@@ -160,10 +141,10 @@ zle -N fzf_insert; bindkey '^y' fzf_insert
 # see: https://github-wiki-see.page/m/junegunn/fzf/wiki/Color-schemes
 function fzf_jump_dir() {
 	files=($(exa --icons --only-dirs| \
-		fzf --prompt '> ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+		fzf --prompt ' ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
 			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
 			--height 50% \
-			--header $'ctrl-[e:edit, o:open, c:cancel]\n' \
+			--info=hidden \
 			--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
 			--bind 'ctrl-o:execute:open {1}' \
 		"$@"))
@@ -187,6 +168,20 @@ function fzf_jump_workspace() {
 }
 zle -N fzf_jump_workspace; bindkey '^w' fzf_jump_workspace
 
+function fzf_jump_project() {
+	files=($(exa ~/workspaces/*.workspace/* --oneline --only-dirs --list-dirs| \
+		fzf --prompt 'projects > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
+			--color=bg+:-1,fg:4,info:15,fg+:4,header:7,hl:5,hl+:5 \
+			--height 50% \
+			--header $'ctrl-[o:open, c:cancel]\n' \
+			--bind 'ctrl-o:execute:open {1}' \
+		"$@"))
+	[[ -n "$files" ]] && cd "${files[@]}"
+	zle && zle reset-prompt
+}
+zle -N fzf_jump_project;
+
+
 function fzf_jump_dir_ext() {
 	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
 	files=($(fd --type d --strip-cwd-prefix --max-depth 3 --max-results 10000 | fzf --prompt 'dirs > ' --layout=reverse --preview 'exa --icons --group-directories-first {}' \
@@ -198,16 +193,3 @@ function fzf_jump_dir_ext() {
 	zle && zle reset-prompt
 }
 zle -N fzf_jump_dir_ext; bindkey '^k' fzf_jump_dir_ext
-
-function fzf_find() {
-	# sk --preview 'bat --style=numbers --color=always --line-range :500 {}'
-	files=($(fd --type d --strip-cwd-prefix --hidden --max-depth 5 --max-results 10000 | fzf --prompt 'files > ' --layout=reverse --preview 'bat --style=numbers --color=always --line-range :500 {}' \
-		--header $'ctrl-e:edit, ctrl-o:open, ctrl-f:files, ctrl-d:dirs\n' \
-		--bind 'ctrl-d:change-prompt(dirs > )+reload(find * -type d)' \
-		--bind 'ctrl-e:execute:${EDITOR:-nvim} {1}' \
-    --bind 'ctrl-f:change-prompt(files > )+reload(find * -type f)' \
-		--bind 'ctrl-o:execute:open {1}' \
-		"$@"))
-	[[ -n "$files" ]] && ${EDITOR:-vim} "${files[@]}"
-}
-zle -N fzf_find; bindkey '^f' fzf_find
